--- a/Car Gauge/ReadMe
+++ b/Car Gauge/ReadMe
@@ -1,3 +1,3 @@
 UI Design of an Car_Gauge by Rehan Sajid.
-Credit Goes to nishad2m8 @ https://www.youtube.com/watch?v=bRCWRRVrFdg&list=PL3qrCUk_IGbNg-nl-k3-DPNBPbwbV3SFA&index=3
+Credit Goes to nishad2m8 @ https://www.youtube.com/@nishad2m8
 I take No credit for this work 
